# LLM_as_OS_Agent

./: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml
notebooks/: L1-editable-memory.ipynb  L3-agent-with-memory.ipynb  L4-programming-agent-memory.ipynb  L5.ipynb  L6.ipynb
scripts/: agent_w_mem.py  create_agent.py  helper.py
