[project]
name = "llm-as-os-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.3"
dependencies = [
    "letta",
    "openai>=1.58.1",
]

[tool.uv.sources]
letta = { path = "letta", editable = true }

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
